<resources>
    <string name="app_name">Simple Task Management</string>
    <string name="title_habits">Habits</string>
    <string name="title_dailies">Dailies</string>
    <string name="title_todo">To Do</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_reports">Reports</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="new_checklist_item">New checklist item</string>
    <string name="checklist">Checklist</string>
    <string name="new_reminder">New reminder</string>
    <string name="reminders">Reminders</string>
    <string name="reward">Reward</string>

    <string name="time">%1$02d:%2$02d</string>
    <string name="date">%1$02d-%2$02d-%3$04d</string>
    <string name="repeat_days">Repeat (Days)</string>
</resources>