<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_habits"
        android:icon="@drawable/ic_habit_black_24dp"
        android:title="@string/title_habits" />

    <item
        android:id="@+id/navigation_dailies"
        android:icon="@drawable/ic_due_date_black_24dp"
        android:title="@string/title_dailies" />

    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/ic_todo_black_24dp"
        android:title="@string/title_todo" />

    <item
        android:id="@+id/navigation_rewards"
        android:icon="@drawable/ic_reward_black_24dp"
        android:title="@string/title_rewards" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_report_black_24dp"
        android:title="@string/title_reports" />

</menu>